如果用户使用的浏览器是ie6，ie7或者ie8，则提示用户使用最新版的浏览器。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -24,7 +24,7 @@
 	src="/dojo/dojo.js"></script>
 	
 <script type="text/javascript">
-	require(["drip/index"]);
+	require(["drip/index", "drip/browserSupport"]);
 </script>
 </head>
 <body style="visibility: hidden;">
