--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
@@ -24,7 +24,7 @@
 	src="/dojo/dojo.js"></script>
 	
 <script type="text/javascript">
-	require(["drip/index"]);
+	require(["drip/index", "drip/browserSupport"]);
 </script>
 </head>
 <body style="visibility: hidden;">
