--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/exercises.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/exercises.html
@@ -4,24 +4,44 @@
 <meta charset="UTF-8">
 <link type="text/css" rel="stylesheet" href="/drip/resources/app.css" />
 <link type="text/css" rel="stylesheet" href="/drip/resources/font-awesome/css/font-awesome.css" />
-<title>习题库 · 孜孜不倦</title>
+<title>题库 · 孜孜不倦</title>
 <script type="text/javascript" 
 	data-dojo-config="
 		async:true,
 		parseOnLoad:false,
 		isDebug:true" 
 	src="/dojo/dojo.js"></script>
+	
+<script type="text/javascript" defer="defer"
+   src="/mathJax/MathJax.js?config=MML_HTMLorMML">
+</script>
 <script type="text/javascript">
 require(["drip/widget/Header",
+         "drip/ExerciseList",
          "dojo/domReady!"], function(
-        		 Header){
+        		 Header,
+        		 ExerciseList){
 	var header = new Header({}, "header");
+	new ExerciseList({
+		style: "margin-top:20px"
+	}, "exercises");
 });
+
+/*
+  
+ 
+ 
+ */
 </script>
 </head>
 <body class="claro">
 <div id="wrapper" class="drip_body">
 	<div id="header" style="min-height:43px"></div>
+	<div class="container">
+		<div id="exercises">
+			
+		</div>
+	</div>
 </div>
 </body>
 </html>
