修正bug #96 进入不同的页面时，如进入“习题库”页面，则Header中的“习题”应高亮显示。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises.html
@@ -21,7 +21,9 @@ require(["drip/widget/Header",
          "dojo/domReady!"], function(
         		 Header,
         		 ExerciseList){
-	var header = new Header({}, "header");
+	var header = new Header({
+		menuSelected: "exercise"
+	}, "header");
 	new ExerciseList({
 		style: "margin-top:20px"
 	}, "exercises");
