--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/exercises/view.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/exercises/view.html
@@ -5,6 +5,9 @@
 <title></title>
 <link type="text/css" rel="stylesheet" href="/drip/resources/app.css" />
 <link type="text/css" rel="stylesheet" href="/drip/resources/font-awesome/css/font-awesome.css" />
+<script type="text/javascript" defer="defer"
+   src="/mathJax/MathJax.js?config=MML_HTMLorMML">
+</script>
 <script type="text/javascript" 
 	data-dojo-config="
 		async:true,
@@ -18,16 +21,42 @@ var exerId = pathName.split("/")[2];
 require(["drip/widget/Header",
          "dojo/request/xhr",
          "dojo/dom",
-         "drip/exerciseHelper",
+         "dojo/on",
+         "drip/view/ExerciseView",
+         "drip/view/AnswerView",
          "dojo/domReady!"], function(
         		 Header,
         		 xhr,
         		 dom,
-        		 exerciseHelper){
+        		 on,
+        		 ExerciseView,
+        		 AnswerView){
 	
-	var header = new Header({}, "header");
-	xhr.get(pathName, {handleAs: "json"}).then(function(data){
-		exerciseHelper.create(data.id, data, dom.byId("exercise"));
+	var header = new Header({
+		menuSelected: null
+	}, "header");
+	xhr.get(pathName, {handleAs: "json", preventCache: true}).then(function(data){
+		var exerciseView = this._exerciseView = new ExerciseView({
+			parentWidgetId: data.id,
+			exerciseInfo: data.exercise,
+			parentNode: dom.byId("exercise"),
+			readOnly: false
+		});
+		exerciseView.render();
+		
+		// 加载最新的答案，一次性加载还是分开加载呢？
+		// 获取登录用户，最近一次的答案
+		var answerView = new AnswerView({
+			exerciseView: exerciseView,
+			answerInfo: data.answer,
+			parentNode: dom.byId("answer")
+		});
+		answerView.render();
+		
+		on(dom.byId("btnSave"), "click", function(e){
+			alert("实现中")
+		});
+		
 	}, function(error){
 		if(error.response.status == 404){
 			window.location.href = "/drip/errors/404.html";
@@ -42,6 +71,10 @@ require(["drip/widget/Header",
 	<div class="container">
 		<div id="exercise" style="margin-top:20px">
 			
+		</div>
+		<div id = "answer"></div>
+		<div id = "actionBar">
+			<button class="button primary" id="btnSave">保存</button>
 		</div>
 	</div>
 </div>
