支持直接在活动列表中切换到编辑状态

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -243,7 +243,7 @@ function sendRenrenRequest(){
 										</li>
 										<li>
 											<a href="#" id="answer_link" style="text-decoration: none;color:#333">
-												<span style="text-align: center;">回答问题数</span>
+												<span style="text-align: center;">解答习题数</span>
 												<strong id="answer_count" style="font-size: 20px"></strong>
 											</a>
 										</li>
